// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prints svg 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<svg width=\\"24px\\" height=\\"24px\\" viewBox=\\"0 0 24 24\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\">
  <path fill=\\"#00C121\\" stroke-linecap=\\"butt\\" d=\\"M24,12 C24,18.627 18.627,24 12,24 C5.373,24 0,18.627 0,12 C0,5.373 5.373,0 12,0 C18.627,0 24,5.373 24,12 Z\\"></path>
  <path fill=\\"none\\" stroke=\\"#FFFFFF\\" stroke-width=\\"2\\" stroke-linecap=\\"round\\" d=\\"M6.5,12.6 L9.75,15.85 L17.25,8.35\\"></path>
</svg>"
`;

exports[`prints svg with quadratics 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<svg width=\\"1200px\\" height=\\"600px\\" viewBox=\\"0 0 1200 600\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\">
  <path fill=\\"none\\" stroke=\\"red\\" stroke-width=\\"5\\" stroke-linecap=\\"butt\\" d=\\"M200,300 Q400,50 600,300 Q800,550 1000,300\\"></path>
  <path fill=\\"black\\" stroke-linecap=\\"butt\\" d=\\"M210,300 C210,305.523 205.523,310 200,310 C194.477,310 190,305.523 190,300 C190,294.477 194.477,290 200,290 C205.523,290 210,294.477 210,300 Z\\"></path>
  <path fill=\\"black\\" stroke-linecap=\\"butt\\" d=\\"M610,300 C610,305.523 605.523,310 600,310 C594.477,310 590,305.523 590,300 C590,294.477 594.477,290 600,290 C605.523,290 610,294.477 610,300 Z\\"></path>
  <path fill=\\"black\\" stroke-linecap=\\"butt\\" d=\\"M1010,300 C1010,305.523 1005.523,310 1000,310 C994.477,310 990,305.523 990,300 C990,294.477 994.477,290 1000,290 C1005.523,290 1010,294.477 1010,300 Z\\"></path>
  <path fill=\\"#888888\\" stroke-linecap=\\"butt\\" d=\\"M410,50 C410,55.523 405.523,60 400,60 C394.477,60 390,55.523 390,50 C390,44.477 394.477,40 400,40 C405.523,40 410,44.477 410,50 Z\\"></path>
  <path fill=\\"#888888\\" stroke-linecap=\\"butt\\" d=\\"M810,550 C810,555.523 805.523,560 800,560 C794.477,560 790,555.523 790,550 C790,544.477 794.477,540 800,540 C805.523,540 810,544.477 810,550 Z\\"></path>
  <path fill=\\"none\\" stroke=\\"#888888\\" stroke-width=\\"2\\" stroke-linecap=\\"butt\\" d=\\"M200,300 L400,50 L600,300 L800,550 L1000,300\\"></path>
</svg>"
`;

exports[`prints svg without quadratics 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<svg width=\\"1200px\\" height=\\"600px\\" viewBox=\\"0 0 1200 600\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\">
  <path fill=\\"none\\" stroke=\\"red\\" stroke-width=\\"5\\" stroke-linecap=\\"butt\\" d=\\"M200,300 C333.333,133.333 466.667,133.333 600,300 C733.333,466.667 866.667,466.667 1000,300\\"></path>
  <path fill=\\"black\\" stroke-linecap=\\"butt\\" d=\\"M210,300 C210,305.523 205.523,310 200,310 C194.477,310 190,305.523 190,300 C190,294.477 194.477,290 200,290 C205.523,290 210,294.477 210,300 Z\\"></path>
  <path fill=\\"black\\" stroke-linecap=\\"butt\\" d=\\"M610,300 C610,305.523 605.523,310 600,310 C594.477,310 590,305.523 590,300 C590,294.477 594.477,290 600,290 C605.523,290 610,294.477 610,300 Z\\"></path>
  <path fill=\\"black\\" stroke-linecap=\\"butt\\" d=\\"M1010,300 C1010,305.523 1005.523,310 1000,310 C994.477,310 990,305.523 990,300 C990,294.477 994.477,290 1000,290 C1005.523,290 1010,294.477 1010,300 Z\\"></path>
  <path fill=\\"#888888\\" stroke-linecap=\\"butt\\" d=\\"M410,50 C410,55.523 405.523,60 400,60 C394.477,60 390,55.523 390,50 C390,44.477 394.477,40 400,40 C405.523,40 410,44.477 410,50 Z\\"></path>
  <path fill=\\"#888888\\" stroke-linecap=\\"butt\\" d=\\"M810,550 C810,555.523 805.523,560 800,560 C794.477,560 790,555.523 790,550 C790,544.477 794.477,540 800,540 C805.523,540 810,544.477 810,550 Z\\"></path>
  <path fill=\\"none\\" stroke=\\"#888888\\" stroke-width=\\"2\\" stroke-linecap=\\"butt\\" d=\\"M200,300 L400,50 L600,300 L800,550 L1000,300\\"></path>
</svg>"
`;
